kernel/tests/snapshots/runtime_cli_snapshots/resolve_main_result_targets__explicit_targets.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "available_labels": [],
    "preview": [],
    "targets": [
      {
        "end_line": 12,
        "start_line": 10,
        "tex_label": "thm:a"
      },
      {
        "end_line": 22,
        "start_line": 20,
        "tex_label": "thm:b"
      }
    ]
  },
  "status": "resolve_main_result_targets_ok"
}
